kubernetes/backup-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: backup
  name: backup
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backup
  strategy: {}
  template:
    metadata:
      labels:
        app: backup
    spec:
      containers:
      - env:
        - name: MYSQL_HOST
          value: mariadb
        - name: MYSQL_PORT
          value: "3306"
        - name: MYSQL_PASSWORD
          value: mypass
        - name: MYSQL_USER
          value: flaski
        - name: MAX_BACKUPS
          value: "15"
        - name: INIT_BACKUP
          value: 0
        - name: CRON_TIME
          value: 44 13 * * *
        image: hub.age.mpg.de/flaski/backup
        name: backup
        resources: {}
        volumeMounts:
          - name: db-backup-volume-mount
            mountPath: /backup/mariadb
      restartPolicy: Always
      imagePullSecrets:
        - name: hubsecret
      volumes:
        - name: db-backup-volume-mount
          persistentVolumeClaim:
            claimName: db-bc-pvc
status: {}
