kubernetes/rsync-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: rsync
  labels:
    app: rsync
spec:
  containers:
  - image: mpgagebioinformatics/myapp:latest #hub.age.mpg.de/flaski/server
    imagePullPolicy: Always
    name: init
    command: ["tail", "-f", "/dev/null"]
    resources: {}
    volumeMounts:
    - name: backup-volume-mount
      mountPath: /backup      
  restartPolicy: Always
  imagePullSecrets:
    - name: dockerlogin
  volumes:
  - name: backup-volume-mount
    persistentVolumeClaim:
      claimName: bc-pvc

status: {}
