kubernetes/mariadb-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  labels:
    app: mariadb
spec:
  selector:
    app: mariadb
  ports:
  - protocol: TCP
    port: 3306
    targetPort: 3306
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb
  labels:
    app: mariadb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
  strategy: {}
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
      - env:
        - name: REDIS_PASSWORD
          valueFrom:
            secretKeyRef:
              name: flaski-secrets
              key: REDIS_PASSWORD
        image: mariadb/server
        name: mariadb
        ports:
          - name: mariadb
            containerPort: 3306
        resources: {}
        volumeMounts:
          - name: db-volume-mount
            mountPath: /var/lib/mysql
      restartPolicy: Always
      volumes:
        - name: db-volume-mount
          persistentVolumeClaim:
            claimName: db-pvc

status: {}



db:/var/lib/mysql
