kubernetes/redis-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
    app: redis
spec:
  selector:
    app: redis
  ports:
  - name: redis
    protocol: TCP
    port: 6379
    targetPort: 6379
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  labels:
    app: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  strategy: {}
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - args:
        - redis-server
        - --requirepass
        - my_redis_password
        image: redis
        name: redis
        ports:
          - name: redis
            containerPort: 6379
        resources: {}
      restartPolicy: Always
status: {}
