kubernetes/server-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: server
  labels:
    app: server
spec:
  selector:
    app: server
  ports:
  - name: server
    protocol: TCP
    port: 80
    targetPort: 8000
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
  labels:
    app: server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  strategy: {}
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
      - env:
        - name: ADMINS
          value: jboucas@age.mpg.de,jorge.boucas@age.mpg.de
        - name: FLASK_ENV
          value: production
        - name: MAIL_PASSWORD
          valueFrom:
            secretKeyRef:
              name: gmailpass
              key: pass
        - name: MAIL_PORT
          value: "587"
        - name: MAIL_SERVER
          value: smtp.googlemail.com
        - name: MAIL_USERNAME
          value: bioflaski@gmail.com
        - name: MAIL_USE_TLS
          value: "1"
        - name: MYSQL_HOST
          value: mariadb
        - name: MYSQL_PORT
          value: "3306"
        - name: MYSQL_ROOT_PASSWORD
          value: mypass
        - name: MYSQL_USER
          value: root
        - name: REDIS_ADDRESS
          value: redis:6379/0
        - name: REDIS_PASSWORD
          value: my_redis_password
        image: jorgeboucas/image_drops:flaski-server #hub.age.mpg.de/flaski/server
        imagePullPolicy: Always
        ports:
          - name: http
            containerPort: 8000
        name: server
        resources: {}
        volumeMounts:
        - name: users-volume-mount
          mountPath: /flaski_data/users/
      restartPolicy: Always
      imagePullSecrets:
        - name: dockerhub
      volumes:
      - name: users-volume-mount
        persistentVolumeClaim:
          claimName: users-pvc

status: {}
